fixed horizontal overflow issue

--- a/woeclipse/static/css/index.css
+++ b/woeclipse/static/css/index.css
@@ -7,7 +7,7 @@ body{
 position: absolute;
 top: 64px;
 left: 0px;
-width: 100vw;
+width: 100%;
 height: 629px;
 background-image: url(../img/fullpage-banner.jpeg);
 background-size: cover;
